--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "express": "^4.16.4",
     "method-override": "^2.3.10",
     "mysql2": "^1.6.5",
-    "sequelize": "^4.43.1"
+    "sequelize": ">=5.3.0"
   }
 }
